fixed header text on tablet view

--- a/docs/sass/styles.scss
+++ b/docs/sass/styles.scss
@@ -39,11 +39,9 @@ header p {
   body{
     padding-top: 0px;
   }
+  
   .navbar-fixed-top {
   margin-bottom: 0px;
-  }
-  header h1 {
-    font-size: 67.5px;
   }
 }
 
